--- a/TODO
+++ b/TODO
@@ -8,6 +8,8 @@ Polish-Stage-1:
   ☐ Background Music @Bryan
   ☐ Environment Effect (color) @Akshay @Louis
   ☐ NPC (Teddy Bears, non-playable character) @Louis
+  ☐ Loginform @Akshay
+
 
 Polish-Stage-2:
   ☐ Sprite || Animation @Everyone
