--- a/TODO
+++ b/TODO
@@ -6,8 +6,6 @@ Polish-Stage-1:
   ☐ Background Music @Bryan
   ☐ Environment Effect (color) @Akshay @Louis
   ☐ NPC (Teddy Bears, non-playable character) @Louis
-  ☐ Loginform @Akshay
-
 
 Polish-Stage-2:
   ☐ Sprite || Animation @Everyone
@@ -23,3 +21,6 @@ Archive:
   ✔ Controllable character @Yonas @Bogdan @Louis @done(2015-10-10 16:00) @project(Prototype)
   ✔ Setup Meteor + Phaser @Kris @done(2015-10-10 15:24) @project(Prototype)
   ✔ Basic PlayFab lib @Kris @done(2015-10-09 20:46) @project(Prototype)
+  ✔ Loginform @Akshay
+  ✔ Scoreing for users @Kristoffer
+  ✔ Leaderboard users @Kristoffer
